# hermes-katana

./: .coverage  .dockerignore  .gitattributes  .gitignore  .gitleaks.toml  .plan-improvements.md  .recon-current-hermes.md  .semgrepignore  .smux-board.json  .task-lead2.md  .task-w1-taint.md  .task-w2-evasion.md  .task-w3-proxy.md  .task-w4-policy.md  .task-w5-coverage.md  .task-w6-harden.md  AUDIT_FINDINGS_PR44.md  AUDIT_FIXES.md  AUDIT_REPORT.md  AUDIT_REVIEW_1.md  AUDIT_REVIEW_2.md  AUDIT_REVIEW_3.md  AUDIT_STATUS.md  CHANGELOG.md  CONTRIBUTING.md  COVERAGE_GAPS.md  EVASION_REPORT.md  GAP_ANALYSIS.md  HANDOFF.md  LICENSE  README.md  SECURITY.md  hermes-katana-next-steps-plan.html  local_models.py  main.py  pyproject.toml  run_agent_shard.py  run_shard.py  sandbox_cli.py  test_evasion.py  (+2 more)
.github/: CODEOWNERS  branch-protection-master.json  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  hermes-drift.yml  pages.yml  release-gate.yml  security.yml
.hypothesis/constants/: 00c12ac1c97edc2c  02756d1619412586  05068b2c31285a24  120a8eb32cdc343b  1386623fdf28f002  1448287f0d9fa75c  170c23d8953ec672  17107ff468494fad  17113d2ecdd7c99d  18d7a24920252d13  1dbdc38c5c4a945e  22282241263061ba  22c73d343fb4cf82  26f183bb587a19e0  271bdedc3f535daa  27323f3f4d6616d8  2832fe07cf3975a6  2e03c7f1497fc838  2f36a1537fa57594  2fcee5a3185f385c  2fd460ea20aa27f0  316f1be1d5ab209c  3278c2708c2d5f40  3877dec09ed53745  407f24e3f58853a5  42025a88673dac7e  43047583896cbc08  4b0384944f303139  4d5e12da0d99b25e  4ed6b431bc57811a  4f02f0c7ed5c07bb  529f51e186b2b2ba  5361d7b068aad868  54b511555500fd7b  5aa09baef6bd3f1e  5ccd625673ca2a6e  5dd4491b32dac79e  61e03bd234bd6fa2  629316087c077c59  65f042d3c73182b2  (+67 more)
docker/proving-ground/: .dockerignore  Dockerfile  README.md  entrypoint.sh  healthcheck.sh
docs/: API.md  artifacts.md  compatibility.md  hermes-agent-v2026.5.29.2-compat-report.md  index.html  internals.html  plan.md  proxy-vault-threat-model.md  quickstart.md  release-checklist.md  runbook.md  scabbard_routing_promotion_gate.md  security-alert-runbook.md  security-governance.md  tiny_scabbard_research.md  v3_release_thread.md
docs/assets/: manual.css
docs/proving_ground/: README.md  factory.md  fleet_runbook.md  limitations.md  methodology.md  mini-agent-guide.md  qwen35_box_setup.md  reproducibility.md
docs/research/: 01-prompt-injection.md  02-taint-tracking-capabilities.md  03-mcp-and-multiagent-security.md  04-cryptography-secret-management.md  05-unicode-attacks.md  06-dangerous-commands-container-security.md  07-behavioral-anomaly-reactive-agents.md  08-proxy-architecture.md  09-policy-engines.md  10-benchmarking-redteam.md
evals/: EVAL_GAPS.md  README.md  adversarial_dispatch.yaml  adversarial_origin_cases.yaml  origin_taxonomy.yaml  run_adversarial.sh  wild-attacks-2026-04.yaml
evals/smoke/: smoke_corpus.jsonl
examples/: README.md  basic_scanning.py  custom_policy.yaml  middleware_chain.py  policy_engine.py  taint_tracking.py  vault_usage.py
examples/proving_ground/: README.md  sample_attacks.jsonl
other/: jailbreaking-ai-llms-paper.html
paper/: .gitignore  Makefile  PAPER_READABLE.md  README.md  REVIEW_PUNCHLIST.md  bibliography.bib  extra_pkgs.tex  fig_confusion.tex  fig_roc.tex  main.tex  neurips.sty
policies/: balanced.yaml  max.yaml  paranoid.yaml  permissive.yaml  scabbard_benign_exemplars.yaml  scabbard_benign_link_domains.yaml  scabbard_known_fps.yaml
policies/examples/: banking.yaml  code-review.yaml
sandbox/: __init__.py  agent_cli_runner.py  behavioral_tracker.py  canaries.py  honeypot.py  observation.py  parsers.py  scanner_middleware.py  session.py  severity.py  workspace.py  workspace_sweeper.py
scripts/: __init__.py  _minimax_english_v12.py  _openai_resubmit_v12.py  analyze_asr_methodology.py  analyze_asr_scientific.py  analyze_synth_fleet.py  asr_dashboard.py  audit_contamination.py  audit_parsers.py  audit_quota_mix_queue_20260506.py  audit_v8_for_hermes_katana_20260515.py  backtrace_multilingual.py  batch_fingerprint.py  batch_run.py  batch_watcher.py  benchmark_hermes_katana_cli_e2e.py  benchmark_hermes_katana_tool_sandbox.py  build_corpus.py  build_crossval_new_effective_20260513.py  build_data_v6_with_origin_balance.py  build_data_v7_with_origin_balance.py  build_defended_quota_mix_20260506.py  build_focused_v4.py  build_focused_v5_1_20260506.py  build_free_discovery_confirm_queue_20260506.py  build_manifest.py  build_next_fleets_20260506.py  build_quota_mix_confirm_queue_20260506.py  build_recovery_shards.py  build_trial_plan.py  build_v8_untested_synth_queue.py  check_hermes_drift.py  check_openai_burn.py  check_regression.py  cross_model_confirm_smoke.py  cross_reference_confirm.py  deep_preflight.py  detection_bench.py  ensemble_detector.py  export_channel_weights.py  (+44 more)
src/hermes_katana/: __init__.py  _files.py  _paths.py  _version.py  artifacts.py  bootstrap.py  config.py  escalation.py  exceptions.py  hermes_plugin.py  metrics.py  ml_artifacts.py  runtime_artifacts.py  security_logging.py
synthdata/: __init__.py  complexify.py  critics.py  expand_gap_labels.py  llm.py  meta_prompt.py  rerun_critics.py  run.py  schema.py  taxonomy.py
tests/: conftest.py  hermes_compat.py  test_addon_script.py  test_codec_evasion.py  test_hardening.py  test_policy_fixes.py  test_proxy_addon.py  test_proxy_injector.py  test_proxy_scanning.py  test_taint_laundering.py  test_vault_migrate.py  test_vault_safety.py  test_yaml_loader.py  test_yaml_loader_coverage.py
tests/bench/: __init__.py  benchmark_scanners.py
tests/differential/: __init__.py  test_vs_open_scanners.py
tests/e2e/: __init__.py  test_multiturn_attacks.py  test_sandbox_agent_loop.py
tests/eval/: __init__.py  _control.py  binary_test_cases.py  conftest.py  run_binary_eval.py  run_eval.py  scanner_runner.py  test_coverage.py  test_coverage_by_category.py  test_multimodal_coverage.py  test_precision_recall.py  test_scabbard_coverage.py
tests/fuzz/: __init__.py  test_scanner_fuzz.py
tests/integration/: test_cli_flow.py  (+8 more)
tools/: prepublish_scrub.py
validators/: __init__.py
(+424 files in other folders)
