[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hermes-katana"
version = "3.1.0"
description = "Defense-in-depth security toolkit for LLM agents — taint tracking, proxy secret guard, policy engine, and red-team benchmarking"
authors = [{name = "Hermes Katana contributors"}]
requires-python = ">=3.10"
license = {text = "MIT"}
readme = "README.md"
keywords = ["llm", "security", "prompt-injection", "taint-tracking", "hermes", "agent-security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]

# Audit finding E7: runtime deps are bounded below AND above. Lower bounds are
# the tested floor; upper bounds pin the next major (or, for cryptography/
# mitmproxy where minors carry breaking security-relevant changes, the next
# minor) so an unattended upgrade of a security-critical library cannot silently
# change behaviour. A hash-pinned lockfile for reproducible installs lives at
# requirements-lock.txt; CI installs with --require-hashes from it.
dependencies = [
    "pydantic>=2.0,<3.0",
    "pyyaml>=6.0,<7.0",
    "cryptography>=41.0,<47.0",
    "click>=8.0,<9.0",
    "keyring>=24.0,<26.0",
    "requests>=2.32.5,<3.0",
    "rich>=13.0,<15.0",
    "bitarray>=2.8,<4.0",
    "pyahocorasick>=2.0,<3.0",
]

[project.optional-dependencies]
proxy = ["mitmproxy>=10.0,<13.0"]
fast-cpu = [
    "numpy>=1.24",
    "onnxruntime>=1.17",
    "transformers>=4.40",
    "sentencepiece>=0.2",
    "huggingface_hub>=0.23",
]
torch-cpu = [
    "numpy>=1.24",
    "torch>=2.2",
    "transformers>=4.40",
    "sentencepiece>=0.2",
    "huggingface_hub>=0.23",
]
ml = [
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "joblib>=1.3",
    "xgboost>=2.0",
    "torch>=2.2",
    "transformers>=4.40",
    "sentencepiece>=0.2",
    "accelerate>=0.30",
    "onnxscript>=0.2",
    "onnxruntime>=1.17",
    "optimum[onnxruntime]>=1.20",
    "sentence-transformers>=3.0",
]
security = ["bitarray>=2.8", "pyahocorasick>=2.0"]
container = ["docker>=7.0"]
benchmark = ["agentdojo>=0.1"]
hf = ["huggingface_hub>=0.23"]
proving-ground = [
    "openai>=1.0",
    "anthropic>=0.40",
    "google-genai>=1.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "joblib>=1.3",
    "psutil>=5.9",
]
dev = [
    "tomli; python_version < \"3.11\"",
    "numpy>=1.24",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "hypothesis>=6.0",
    "responses>=0.26.0",
    "ruff>=0.4",
    "mypy>=1.8",
    "build>=1.2",
    "twine>=5.0",
]
test = ["hermes-katana[dev,fast-cpu,proving-ground]"]
all = ["hermes-katana[proxy,fast-cpu,torch-cpu,ml,container,benchmark,hf,proving-ground,dev]"]

[project.scripts]
hermes-katana = "hermes_katana.cli.main:main"
katana = "hermes_katana.cli.main:main"
proving-ground = "hermes_katana.proving_ground.cli:main"

[project.entry-points."hermes_agent.plugins"]
katana = "hermes_katana.hermes_plugin"

[tool.hatch.build.targets.wheel]
packages = ["src/hermes_katana"]

[tool.hatch.build.targets.wheel.force-include]
"policies" = "hermes_katana/policies"

[tool.hatch.build.targets.sdist]
include = [
    "/CHANGELOG.md",
    "/CONTRIBUTING.md",
    "/LICENSE",
    "/README.md",
    "/SECURITY.md",
    "/.gitleaks.toml",
    "/docker",
    "/docs",
    "/evals",
    "/examples",
    "/policies",
    "/pyproject.toml",
    "/scripts",
    "/src",
    "/tests",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
norecursedirs = [".*", "build", "dist", "CVS", "_darcs", "{arch}", "*.egg", "venv", ".venv", "tests/_archive"]
filterwarnings = [
    # SWIG-generated bindings (mitmproxy/pywin32 on Py3.13+) emit these at
    # C-extension load time; they have no module name we can match by, so
    # filter on the warning text instead. Upstream noise, not our code.
    "ignore:builtin type SwigPy.* has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type swigvarlink has no __module__ attribute:DeprecationWarning",
]

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = ["tests/fixtures/"]

[tool.ruff.lint]
# PLW1514: text-mode open()/read_text()/write_text() without an explicit encoding=.
# The hermes-katana scanner pipeline reads UTF-8 pattern files at import time;
# the cp1252 default on Windows previously poisoned every scan with a fail-closed
# BLOCK. Keep this rule on so the bug class cannot regress.
#
# PLW1514 is still a preview rule in ruff at the time of this fix; it takes
# effect once the rule graduates or `preview = true` is enabled fleet-wide.
# Listing it here is forward-compat documentation as well as a self-test
# (the sweep that produced this entry already added `encoding="utf-8"` to
# every text-mode call in src/).
extend-select = ["PLW1514"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.bandit]
targets = ["src", "examples", "scripts"]
exclude_dirs = [
    ".venv",
    "build",
    "dist",
    "tests",
    "tests/fixtures",
    "tests/_archive",
]
